[package]
name = "deadlockrail"
version = "0.1.0"
authors = ["Bjørnar Luteberget <Bjornar.Luteberget@sintef.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "1.11"
satcoder = { git = "https://github.com/luteberget/salvers", rev="0f83a5c" }
structopt = "0.3"
hprof = "0.1"
velcro = "0.5"

[profile.release]
lto=true
